--- a/Combined_VIF_analysis/InsertionAnalysis/InsertionCounting.Rmd
+++ b/Combined_VIF_analysis/InsertionAnalysis/InsertionCounting.Rmd
@@ -211,7 +211,7 @@ all_samples_processed_info %>% select(sample_name, seqtype) %>% unique() %>% gro
 project_sample_counts = all_samples_processed_info %>% select(participant, cohort, project, tumor_or_normal, seqtype) %>%
   unique() %>%
   group_by(cohort, project, seqtype) %>%
-  tally(name='participant_count')
+  tally(name='sample_count')
 
 project_sample_counts
 
@@ -219,7 +219,7 @@ project_sample_counts
 
 
 ```{r}
-project_sample_counts %>% ggplot(aes(x=cohort, y=participant_count, fill=seqtype)) + geom_col() + 
+project_sample_counts %>% ggplot(aes(x=cohort, y=sample_count, fill=seqtype)) + geom_col() + 
   facet_wrap(~cohort, scale='free', nrow=1) +
    theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
@@ -228,7 +228,7 @@ project_sample_counts %>% ggplot(aes(x=cohort, y=participant_count, fill=seqtype
 ```{r}
 project_sample_counts %>%
   filter(cohort %in% c('GTEx', 'TCGA', 'TARGET') ) %>%
-  ggplot(aes(x=project, y=participant_count, fill=seqtype)) + geom_col() + 
+  ggplot(aes(x=project, y=sample_count, fill=seqtype)) + geom_col() + 
   facet_wrap(~cohort, scale='free', ncol=1) +
    theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
