--- a/Combined_VIF_analysis/InsertionAnalysis/Insertion_threshold_analysis.VirusContentDisparity.Rmd
+++ b/Combined_VIF_analysis/InsertionAnalysis/Insertion_threshold_analysis.VirusContentDisparity.Rmd
@@ -12,18 +12,30 @@ library(tidyverse)
 
 ```{r}
 
-rna_insertions_data = read.table("all_insertions_and_virus_content_merged.tsv", header=T, sep="\t", stringsAsFactors = F) %>%
-  filter(seqtype == "RNA")
+insertions_data = read.table("all_insertions_and_virus_content_merged.w_shared_site_info.tsv", header=T, sep="\t", stringsAsFactors = F) 
 
-nrow(rna_insertions_data)
+nrow(insertions_data)
+```
+
+```{r}
+# insertion loci?
+
+BINDIST = 1000
+
+insertions_data  = insertions_data %>% mutate(insertion_locus = paste0(humanchr, "^", round(human_coord/BINDIST)))
+
+insertions_data %>% select(sample_id, virus, insertion_locus) %>% unique() %>% nrow()
+
 ```
 
 
+
+
 ```{r}
-num_insertions_with_matching_virus_content = rna_insertions_data %>% filter %>% select(sample_name, virus, virus_brkend_grp) %>% unique() %>% nrow()
+num_insertions_with_matching_virus_content = insertions_data %>%  filter(matching_virus_content) %>% select(sample_name, virus, virus_brkend_grp) %>% unique() %>% nrow()
 message("num insertions with matching virus content: ", num_insertions_with_matching_virus_content)
 
-num_insertions_without_matching_virus_content =rna_insertions_data %>% filter(is.na(mapped) ) %>% select(sample_name, virus, virus_brkend_grp) %>% unique() %>% nrow()
+num_insertions_without_matching_virus_content = insertions_data %>% filter(! matching_virus_content) %>% select(sample_name, virus, virus_brkend_grp) %>% unique() %>% nrow()
 message("num insertions without matching virus content: ", num_insertions_without_matching_virus_content)
 
 ```
@@ -34,7 +46,7 @@ message("num insertions without matching virus content: ", num_insertions_withou
 
 ```{r}
 
-insertions_no_matching_virus_content = rna_insertions_data %>% filter(is.na(mapped)) %>% arrange(desc(total_rpm))
+insertions_no_matching_virus_content = insertions_data %>% filter(! matching_virus_content) %>% arrange(desc(total_rpm))
 
 insertions_no_matching_virus_content
 ```
@@ -42,7 +54,7 @@ insertions_no_matching_virus_content
 
 ```{r}
 
-write.table(insertions_no_matching_virus_content, file="rna_insertions_without_matching_virus_content.tsv", sep="\t", quote=F, row.names=F)
+write.table(insertions_no_matching_virus_content, file="insertions_without_matching_virus_content.tsv", sep="\t", quote=F, row.names=F)
 
 ```
 
@@ -56,20 +68,28 @@ insertion_without_matching_virus_counts = NULL
 
 for (min_read_count in c(1,2,3,4,5,6,7,8,9,10) ) {
   
-  merged_data_min = rna_insertions_data %>% filter(total >= min_read_count)
-  num_insertions = nrow(merged_data_min)
+  merged_data_min = insertions_data %>% filter(total >= min_read_count) #%>% filter(grepl("Eppstein-Barr", virus))  # examine effects of different virus types
+  num_insertions = merged_data_min %>% 
+    #select(sample_name, virus, virus_brkend_grp) %>% unique() %>% 
+    nrow()
   
-  num_without_matching_virus = nrow(merged_data_min %>% filter(! matching_virus_content) )
+  num_samples_with_insertions = merged_data_min %>% select(sample_id) %>% unique() %>% nrow()
+  
+  num_without_matching_virus = merged_data_min %>% filter(! matching_virus_content) %>% 
+    #select(sample_name, virus, virus_brkend_grp) %>% unique() %>% 
+    nrow()
   
   insertion_without_matching_virus_counts = bind_rows(insertion_without_matching_virus_counts, 
                                                       data.frame(min_read_count = min_read_count,
                                                                  num_insertions = num_insertions, 
-                                                                 num_without_matching_virus = num_without_matching_virus))
+                                                                 num_without_matching_virus = num_without_matching_virus,
+                                                                 num_samples_with_insertions = num_samples_with_insertions))
   
 }
 
 
-insertion_without_matching_virus_counts = insertion_without_matching_virus_counts %>% mutate(frac_without_matching_virus = num_without_matching_virus/num_insertions)
+insertion_without_matching_virus_counts = insertion_without_matching_virus_counts %>% 
+                    mutate(frac_without_matching_virus = num_without_matching_virus/num_insertions)
 
 insertion_without_matching_virus_counts
 
@@ -79,17 +99,115 @@ insertion_without_matching_virus_counts
 ```{r}
 
 
-insertion_without_matching_virus_counts %>% ggplot(aes(x=min_read_count, y=frac_without_matching_virus)) + geom_col()
+insertion_without_matching_virus_counts %>% ggplot(aes(x=min_read_count, y=frac_without_matching_virus)) + geom_col() +
+  ggtitle("fraction of insertions w/o matching sample virus content ~ min evidence reads")
 
 ```
 ```{r}
 
-insertion_without_matching_virus_counts %>% ggplot(aes(x=min_read_count, y=num_insertions)) + geom_col()
+insertion_without_matching_virus_counts %>% ggplot(aes(x=min_read_count, y=num_insertions)) + geom_col() +
+  ggtitle("number of virus insertions ~ min evidence reads")
 
 
 
 ```
 
 
+```{r}
+
+insertion_without_matching_virus_counts %>% ggplot(aes(x=min_read_count, y=num_samples_with_insertions)) + geom_col() +
+  ggtitle("num samples with insertions ~ min evidence reads")
+
+
+```
+
+
+# what viruses have evidence of insertions at threshold cutoffs?
+```{r}
+
+insertions_with_matching_virus_content =  insertions_data %>%  filter(matching_virus_content) 
+
+```
+
+```{r}
+
+insertion_sample_counts_min1 = insertions_with_matching_virus_content %>%  select(sample_name, virus) %>% unique()  %>% 
+  group_by(virus) %>% tally() 
+
+insertion_sample_counts_min1 %>% ggplot(aes(x=virus, y=n)) + geom_col() + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+   scale_y_continuous(trans='log10') +
+  ggtitle("virus insertion sample counts, min ev reads = 1")
+
+```
+
+```{r}
+
+insertion_sample_counts_min2 = insertions_with_matching_virus_content %>% filter(total >= 2) %>% select(sample_name, virus) %>% unique()  %>% 
+  group_by(virus) %>% tally() 
+
+insertion_sample_counts_min2  %>% ggplot(aes(x=virus, y=n)) + geom_col() + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+   scale_y_continuous(trans='log10') +
+  ggtitle("virus insertion sample counts, min ev reads = 2")
+
+```
+
+```{r}
+
+insertion_sample_counts_by_min_ev_reads = bind_rows(insertion_sample_counts_min1 %>% mutate(min_reads = 1),
+                                                    insertion_sample_counts_min2 %>% mutate(min_reads = 2) )
+
+
+insertion_sample_counts_by_min_ev_reads %>% ggplot(aes(x=virus, y=n, fill=factor(min_reads))) + geom_bar(stat='identity', position='dodge') + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+   scale_y_continuous(trans='log10') +
+  ggtitle("virus insertion sample counts, by min ev reads")
+
+```
+
+
+
+```{r}
+
+insertion_counts_min1 = insertions_with_matching_virus_content %>% group_by(virus) %>% tally()
+
+insertion_counts_min1  %>%
+  ggplot(aes(x=virus, y=n)) + geom_col()  +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+   scale_y_continuous(trans='log10')  + 
+  ggtitle("insertion count by virus, min reads = 1")
+
+
+```
+
+
+```{r}
+
+insertion_counts_min2 = insertions_with_matching_virus_content %>% 
+  filter(total >= 2) %>%
+  group_by(virus) %>% tally() 
+
+insertion_counts_min2 %>%
+  ggplot(aes(x=virus, y=n)) + geom_col()  +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+   scale_y_continuous(trans='log10')  +
+  ggtitle("insertion counts by virus, min reads = 2")
+
+
+```
+
+```{r}
+insertion_counts_by_virus = bind_rows(insertion_counts_min1 %>% mutate(min_reads = 1),
+                                      insertion_counts_min2 %>% mutate(min_reads = 2))
+
+
+insertion_counts_by_virus  %>% ggplot(aes(x=virus, y=n, fill=factor(min_reads))) + geom_bar(stat='identity', position='dodge') + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+   scale_y_continuous(trans='log10') +
+  ggtitle("virus insertion counts, by min ev reads")
+
+
+```
 
 
