--- a/Combined_VIF_analysis/InsertionAnalysis/Insertion_threshold_analysis.by_orthogonal_brkpt_support.Rmd
+++ b/Combined_VIF_analysis/InsertionAnalysis/Insertion_threshold_analysis.by_orthogonal_brkpt_support.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "InsertionAnalysis.Rmd"
+title: "InsertionAnalysis.by_orthogonal_breakpoint_support.Rmd"
 author: "bhaas"
 date: '2023-03-07'
 output: html_document
